implement in fallback in memory cache layer