@@ -11,6 +11,7 @@ import org.example.backend.model.Query;
 import org.example.backend.repo.MovieRepo;
 import org.example.backend.repo.QueryRepo;
 import org.example.backend.validation.SearchQueryValidator;
+import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -19,10 +20,11 @@ import org.springframework.web.client.RestTemplate;
 import java.security.SecureRandom;
 import java.util.*;
 import java.time.LocalDate;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 @Service
-public class MovieAPIService {
+public class MovieAPIService implements InitializingBean {
 
     private final MovieRepo movieRepository;
     private final RestTemplate restTemplate;
@@ -33,6 +35,9 @@ public class MovieAPIService {
     private static final String TMDB_BASE_URL = "https://api.themoviedb.org/3/find/";
     private static final String TMDB_IMAGE_URL = "https://image.tmdb.org/t/p/original";
     private static final String NETZKINO_URL = "https://api.netzkino.de.simplecache.net/capi-2.0a/search";
+
+    private final Map<String, List<Movie>> searchCache = new ConcurrentHashMap<>();
+    private final Map<LocalDate, List<Movie>> dailyCache = new ConcurrentHashMap<>();
 
 
     // comment: I plan to transfer predefinedNames into specific endpoint later in time
@@ -314,18 +319,36 @@ public class MovieAPIService {
         this.netzkinoEnv = netzkinoEnv;
     }
 
+    @Override
+    public void afterPropertiesSet() throws Exception {
+        // Preload all query-based movies into searchCache
+        queryRepository.findAll().forEach(q -> {
+            movieRepository.findByQueriesContaining(q.query())
+                    .ifPresent(list -> searchCache.put(q.query(), list));
+        });
+        // Preload today's movies into dailyCache
+        LocalDate today = LocalDate.now();
+        movieRepository.findByDateFetchedContaining(today)
+                .ifPresent(list -> dailyCache.put(today, list));
+    }
+
+
     public List<Movie> fetchMoviesBySearchQuery(String searchQuery) {
         validateSearchQuery(searchQuery);
-
-        // 1a) check cache
+        // 1) quick in-memory lookup
+        if (searchCache.containsKey(searchQuery)) {
+            return searchCache.get(searchQuery);
+        }
+        // 2) fallback to hitting DB (in case cache missed) or API
         List<Movie> existing = movieRepository.findByQueriesContaining(searchQuery)
                 .orElse(List.of());
         if (!existing.isEmpty()) {
+            searchCache.put(searchQuery, existing);
             return existing;
         }
-
-        // 1b) full fetch (no limit)
-        return fetchAndStoreAllMovies(searchQuery);
+        List<Movie> all = fetchAndStoreAllMovies(searchQuery);
+        searchCache.put(searchQuery, all);
+        return all;
     }
 
     private List<Movie> fetchAndStoreAllMovies(String query) {
@@ -345,38 +368,48 @@ public class MovieAPIService {
     }
 
     public List<Movie> getMoviesOfTheDay(List<String> names) {
-        System.out.println("Fetching daily movies...");
-
-        // Check: welcher Tag ist heute?
-
-        names = Optional.ofNullable(names).filter(list -> !list.isEmpty()).orElse(predefinedNames);
         LocalDate today = LocalDate.now();
 
-        // Check: heutige movies bereits in Datenbank -> return
+        // 0) Return movies for any previously used query in 'names'
+        if (names != null && !names.isEmpty()) {
+            List<Query> usedQueries = queryRepository.findAll();
+            for (String q : names) {
+                boolean wasUsed = usedQueries.stream()
+                        .anyMatch(existing -> existing.query().equals(q));
+                if (wasUsed) {
+                    // Fetch and return all movies matching this query
+                    return movieRepository.findByQueriesContaining(q)
+                            .orElse(Collections.emptyList());
+                }
+            }
+        }
 
-        System.out.println("Today's date: " + today);
-        System.out.println("Checking if movies are already stored for today...");
+        // 1) In-memory cache
+        if (dailyCache.containsKey(today)) {
+            return dailyCache.get(today)
+                    .stream()
+                    .limit(5)
+                    .collect(Collectors.toList());
+        }
 
-        List<Movie> existingMovies = movieRepository.findByDateFetchedContaining(today).orElse(List.of());
-
+        // 2) Database fallback
+        List<Movie> existingMovies = movieRepository.findByDateFetchedContaining(today)
+                .orElse(Collections.emptyList());
         if (!existingMovies.isEmpty()) {
-            System.out.println("Found " + existingMovies.size() + " existing movies for today, returning them.");
-            return existingMovies.stream().limit(5).toList(); // Changed here
+            List<Movie> limited = existingMovies.stream()
+                    .limit(5)
+                    .collect(Collectors.toList());
+            dailyCache.put(today, limited);
+            return limited;
         }
 
-        // heutige movies nicht in Datenbank? -> fetchAndStoreMovies
+        // 3) Fetch new movies
+        List<String> source = (names != null && !names.isEmpty()) ? names : predefinedNames;
+        String queryForToday = source.get(secureRandom.nextInt(source.size()));
 
-        String queryForToday = names.get(secureRandom.nextInt(names.size()));
-        System.out.println("Selected query for fetching movies: " + queryForToday);
-
-        if (queryRepository.findAll().stream().anyMatch(q -> q.query().contains(queryForToday))) {
-            System.out.println("Query " + queryForToday + " has already been used. Fetching from database.");
-            return movieRepository.findByQueriesContaining(queryForToday)
-                    .orElse(List.of()).stream().limit(5).toList();
-        }
-
-        System.out.println("Query not used before, fetching new movies...");
-        return fetchAndStoreMoviesForDay(queryForToday, List.of(today));
+        List<Movie> fetched = fetchAndStoreMoviesForDay(queryForToday, List.of(today));
+        dailyCache.put(today, fetched);
+        return fetched;
     }
 
     public List<Movie> fetchAndStoreMoviesForDay(String query, List<LocalDate> dateFetched) {
